# qr-mate.com-oss

./: DESIGN_RULE.md  NOTICE.txt  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
licenses/: THIRD_PARTY_LICENSES.txt
src/: App.tsx  Routing.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  Windows.iss  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/licenses/: THIRD_PARTY_LICENSES.txt
src-tauri/src/: lib.rs  main.rs
src/Components/: Loading.tsx  SideBar.tsx
src/Components/Dashboard/: Index.tsx  QrCodeList.tsx  QrCodeReading.tsx  QrCodeSetting.tsx  QrGenerate.tsx
src/Components/Dashboard/Dialog/: ErrorDialog.tsx  QrCodeExportDialog.tsx  UpgradeSuggestDialog.tsx
src/Components/Dashboard/Options/: BackgroundOptionsComponent.tsx  CornersDotOptionsComponent.tsx  CornersSquareOptionsComponent.tsx  DotsOptions.tsx
src/Components/Dashboard/QrCodeList/: QrCodeListCsvExportButton.tsx  QrCodeListExportCsvButton.tsx  QrCodeListExportPngButton.tsx  QrCodeListHandsontable.tsx
src/Components/Dashboard/QrCodeSetting/: QrCodeSettingCenterImage.tsx  QrCodeSettingOptions.tsx  QrCodeSettingPreview.tsx
src/Provider/: DataProvider.tsx  ToastProvider.tsx
src/Types/: Config.ts  Enum.ts  History.ts  HistoryAction.ts  HistoryActionEvent.ts  Project.ts  Qr.ts  QrCodeData.ts  useBackgroundOptions.ts  useCornersDotOptions.ts  useCornersSquareOptions.ts  useDotsOptions.ts
