[package]
name = "QR_Mate_OSS"
version = "0.1.0"
description = "A simple QR code generator."
authors = ["mao <mao.lembryo@gmail.com>"]
license = "MIT License"
edition = "2021"
rust-version = "1.64.0"

[lib]
name = "qr_mate_oss_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }

[dependencies]
tauri = { version = "2.4.0", features = [] }
tauri-plugin-dialog = "2.2.0"
tauri-plugin-fs = "2.2.0"
tauri-plugin-shell = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[profile.release]
debug = false
opt-level = "z"
lto = true
strip = "symbols"
codegen-units = 1
panic = "abort"
