[package]
name = "QR_Mate_OSS"
version = "1.0.3"
description = "A fully offline, secure QR code generator and reader built with Tauri, designed for large-scale usage."
authors = ["mao <mao.lembryo@gmail.com>"]
license = "MIT License"
edition = "2021"
rust-version = "1.64.0"

[lib]
name = "qr_mate_oss_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
tauri = { version = "2.7.0", features = [] }
tauri-plugin-dialog = "2.3.2"
tauri-plugin-fs = "2.4.1"
tauri-plugin-shell = "2.3.0"

[profile.release]
debug = false
opt-level = "z"
lto = true
strip = "symbols"
codegen-units = 1
panic = "abort"
